# FW12Rotate

./: CMakeLists.txt  LICENSE  README.md  fw12rotate-git.install  fw12rotate.cpp  main.cpp  toggle-rotation.sh
